# template-clap-plugin

./: .gitmodules  CMakeLists.txt  clap_plugin.cmake
clap/: CMakeLists.txt
cmake/: clap.cmake  clap_plugin.cmake  deps.cmake
include/clapper/: clapper.hxx
include/plugin/: gui.hxx  plugin.hxx
include/plugin/gui/: gui.hxx  gui_windows.cxx  win32.cxx  win32.hxx
libs/plugin/: CMakeLists.txt
libs/plugin/config/: config.hxx  in.hxx  out.hxx
libs/plugin/include/plugin/: config.hxx  gui.hxx  helper.hxx  plugin.hxx  win32.hxx  window.hxx
libs/plugin/src/: gui_win32.cxx  gui_windows.cxx  helper.cxx  plugin.cxx
plugins/gain/: CMakeLists.txt  gain.cxx  gain.hxx
src/: entry.cxx  gain.cxx  gain.hxx  plugin-template.c  plugin.c  plugin.cxx  plugin.h  plugin.hh  plugin.hxx
src/gain/: CMakeLists.txt  gain.hxx
